--- a/warehousing.html
+++ b/warehousing.html
@@ -100,7 +100,7 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
