--- a/channel-partner.html
+++ b/channel-partner.html
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="nav_item">
-                                <a href="">Blogs</a>
+                               <a href="the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html">Blogs</a>
                             </div>
                             <div class="nav_item">
                                 <a href="contact.html">Contact Us</a>
@@ -542,7 +542,7 @@
                             <a href="index.html">Home</a>
                             <a href="about.html">About Us</a>
                             <a href="services.html">Services</a>
-                            <a href="">Blogs</a>
+                           <a href="the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html">Blogs</a>
                             <a href="contact.html">Contact Us</a>
                             <a href="international-freight-forwarders.html">International Freight Forwarders</a>
                         </div>
