--- a/cookies-policy.html
+++ b/cookies-policy.html
@@ -22,7 +22,7 @@
         href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Jomhuria&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
-
+ 
 
 
         
@@ -171,7 +171,7 @@
                                 </div>
                             </div>
                             <div class="nav_item">
-                                <a href="">Blogs</a>
+                               <a href="the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html">Blogs</a>
                             </div>
                             <div class="nav_item">
                                 <a href="contact.html">Contact Us</a>
@@ -352,7 +352,7 @@
                             <a href="index.html">Home</a>
                             <a href="about.html">About Us</a>
                             <a href="services.html">Services</a>
-                            <a href="">Blogs</a>
+                           <a href="the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html">Blogs</a>
                             <a href="contact.html">Contact Us</a>
                             <a href="international-freight-forwarders.html">International Freight Forwarders</a>
                         </div>
