--- a/customs-clearance.html
+++ b/customs-clearance.html
@@ -54,21 +54,19 @@
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://incshipping.com/customs-clearance" />
-    <meta property="og:title" content=" Customs Clearance Services in Dubai | Customs Clearance Agent UAE" />
-    <meta property="og:description"
-        content="INC Express offers seamless Customs Clearance Services in Dubai, ensuring efficient freight forwarding, documentation, and authority procedures for hassle-free import and export." />
-    <meta property="og:image" content="https://incshipping.com/img/Group%20390.webp" />
+   <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://incshipping.com/customs-clearance" />
+<meta property="og:title" content=" Customs Clearance Services in Dubai | Customs Clearance Agent UAE" />
+<meta property="og:description" content="INC Express offers seamless Customs Clearance Services in Dubai, ensuring efficient freight forwarding, documentation, and authority procedures for hassle-free import and export." />
+<meta property="og:image" content="https://incshipping.com/img/Group%20390.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/customs-clearance" />
-    <meta property="twitter:title" content=" Customs Clearance Services in Dubai | Customs Clearance Agent UAE" />
-    <meta property="twitter:description"
-        content="INC Express offers seamless Customs Clearance Services in Dubai, ensuring efficient freight forwarding, documentation, and authority procedures for hassle-free import and export." />
-    <meta property="twitter:image" content="https://incshipping.com/img/Group%20390.webp" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/customs-clearance" />
+<meta property="twitter:title" content=" Customs Clearance Services in Dubai | Customs Clearance Agent UAE" />
+<meta property="twitter:description" content="INC Express offers seamless Customs Clearance Services in Dubai, ensuring efficient freight forwarding, documentation, and authority procedures for hassle-free import and export." />
+<meta property="twitter:image" content="https://incshipping.com/img/Group%20390.webp" />
 
 
 
@@ -159,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="nav_item">
-                                <a href="">Blogs</a>
+                               <a href="the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html">Blogs</a>
                             </div>
                             <div class="nav_item">
                                 <a href="contact.html">Contact Us</a>
@@ -463,8 +461,7 @@
                 <div class="footer_logo_container">
                     <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
                         alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and Customs Clearance
-                        Agent UAE.</p>
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and Customs Clearance Agent UAE.</p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -477,7 +474,7 @@
                             <a href="index.html">Home</a>
                             <a href="about.html">About Us</a>
                             <a href="services.html">Services</a>
-                            <a href="">Blogs</a>
+                           <a href="the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html">Blogs</a>
                             <a href="contact.html">Contact Us</a>
                             <a href="international-freight-forwarders.html">International Freight Forwarders</a>
                         </div>
@@ -621,6 +618,9 @@
 
 
 
+
+
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KXGHLLB3" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
@@ -631,24 +631,19 @@
         _linkedin_partner_id = "6399548";
         window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
         window._linkedin_data_partner_ids.push(_linkedin_partner_id);
-    </script>
-    <script type="text/javascript">
-        (function (l) {
-            if (!l) {
-                window.lintrk = function (a, b) { window.lintrk.q.push([a, b]) };
-                window.lintrk.q = []
-            }
-            var s = document.getElementsByTagName("script")[0];
-            var b = document.createElement("script");
-            b.type = "text/javascript"; b.async = true;
-            b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
-            s.parentNode.insertBefore(b, s);
-        })(window.lintrk);
-    </script>
-    <noscript>
-        <img height="1" width="1" style="display:none;" alt=""
-            src="https://px.ads.linkedin.com/collect/?pid=6399548&fmt=gif" />
-    </noscript>
+        </script><script type="text/javascript">
+        (function(l) {
+        if (!l){window.lintrk = function(a,b){window.lintrk.q.push([a,b])};
+        window.lintrk.q=[]}
+        var s = document.getElementsByTagName("script")[0];
+        var b = document.createElement("script");
+        b.type = "text/javascript";b.async = true;
+        b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+        s.parentNode.insertBefore(b, s);})(window.lintrk);
+        </script>
+        <noscript>
+        <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=6399548&fmt=gif" />
+        </noscript>
 </body>
 
 </html>
