--- a/about.html
+++ b/about.html
@@ -285,7 +285,7 @@
                                 </div>
                             </div>
                             <div class="nav_item">
-                                <a href="">Blogs</a>
+                                <a href="https://incshipping.com/blog">Blogs</a>
                             </div>
                             <div class="nav_item">
                                 <a href="contact.html">Contact Us</a>
@@ -354,7 +354,7 @@
                             Handling</a><br>
                     </div>
                 </div>
-                <a href="#">Blogs</a> <br>
+                <a href="https://incshipping.com/blog">Blogs</a> <br>
                 <a href="contact.html">Contact Us</a> <br><br>
                 <a href="tel:+971503524424"> &nbsp; &nbsp;<i class="fa-solid fa-phone"></i>+971 503524424</a> <br>
 
@@ -701,7 +701,7 @@
                             <a href="index.html">Home</a>
                             <a href="about.html">About Us</a>
                             <a href="services.html">Services</a>
-                            <a href="">Blogs</a>
+                            <a href="https://incshipping.com/blog">Blogs</a>
                             <a href="contact.html">Contact Us</a>
                             <a href="international-freight-forwarders.html">International Freight Forwarders</a>
                         </div>
