--- a/pharma-shipment-handling.html
+++ b/pharma-shipment-handling.html
@@ -122,7 +122,7 @@
       {
         "@context": "http://schema.org",
         "@type": "LocalBusiness",
-        "url": "https://incshipping.com/the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html"
+        "url": "https://incshipping.com/blog"
       },
       {
         "@context": "http://schema.org",
@@ -154,7 +154,7 @@
       {
         "@context": "http://schema.org",
         "@type": "LocalBusiness",
-        "url": "https://incshipping.com/the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html"
+        "url": "https://incshipping.com/blog"
       },
       {
         "@context": "http://schema.org",
@@ -287,7 +287,7 @@
                             </div>
                             <div class="nav_item">
                                 <a
-                                    href="the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html">Blogs</a>
+                                    href="https://incshipping.com/blog">Blogs</a>
                             </div>
                             <div class="nav_item">
                                 <a href="contact.html">Contact Us</a>
@@ -356,7 +356,7 @@
                             Handling</a><br>
                     </div>
                 </div>
-                <a href="#">Blogs</a> <br>
+                <a href="https://incshipping.com/blog">Blogs</a> <br>
                 <a href="contact.html">Contact Us</a> <br><br>
                 <a href="tel:+971503524424"> &nbsp; &nbsp;<i class="fa-solid fa-phone"></i>+971 503524424</a> <br>
             </div>
@@ -645,7 +645,7 @@
                             <a href="about.html">About Us</a>
                             <a href="services.html">Services</a>
                             <a
-                                href="the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html">Blogs</a>
+                                href="https://incshipping.com/blog">Blogs</a>
                             <a href="contact.html">Contact Us</a>
                             <a href="international-freight-forwarders.html">International Freight Forwarders</a>
                         </div>
