--- a/temprature-controlled-cargo.html
+++ b/temprature-controlled-cargo.html
@@ -143,7 +143,7 @@
         "@context": "http://schema.org",
         "@type": "LocalBusiness",
         "image": "https://incshipping.com/img/inc_nav_logo.webp",
-        "url": "https://incshipping.com/the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html"
+        "url": "https://incshipping.com/blog"
       },
       {
         "@context": "http://schema.org",
@@ -269,7 +269,7 @@
                             </div>
                             <div class="nav_item">
                                 <a
-                                    href="the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html">Blogs</a>
+                                    href="https://incshipping.com/blog">Blogs</a>
                             </div>
                             <div class="nav_item">
                                 <a href="contact.html">Contact Us</a>
@@ -338,7 +338,7 @@
                             Handling</a><br>
                     </div>
                 </div>
-                <a href="#">Blogs</a> <br>
+                <a href="https://incshipping.com/blog">Blogs</a> <br>
                 <a href="contact.html">Contact Us</a> <br><br>
                 <a href="tel:+971503524424"> &nbsp; &nbsp;<i class="fa-solid fa-phone"></i>+971 503524424</a> <br>
             </div>
@@ -602,7 +602,7 @@
                             <a href="about.html">About Us</a>
                             <a href="services.html">Services</a>
                             <a
-                                href="the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html">Blogs</a>
+                                href="https://incshipping.com/blog">Blogs</a>
                             <a href="contact.html">Contact Us</a>
                             <a href="international-freight-forwarders.html">International Freight Forwarders</a>
                         </div>
