--- a/road-freight.html
+++ b/road-freight.html
@@ -558,9 +558,10 @@
                                 href="https://incshipping.com/blog">Blogs</a>
                             <a href="contact.html">Contact Us</a>
                             <a href="international-freight-forwarders.html">International Freight Forwarders</a>
-                            <a href="best-logistics-company-in-uk/index.html">UK</a>
-                            <a href="best-logistics-company-in-the-usa/index.html">USA</a>
+                            <a href="best-logistics-company-in-united-kingdom/index.html">United Kingdom</a>
+                            <a href="best-logistics-company-in-the-united-states-of-america/index.html">United States</a>
                             <a href="best-logistics-company-in-the-netherlands/index.html">Netherlands</a>
+                            <a href="best-logistics-company-in-united-arab-emirates/index.html">Arab Emirates</a>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_quick_links">
@@ -577,6 +578,7 @@
                             <a href="cross-trade.html">Cross Trade</a>
                             <a href="dangerous-goods.html">Dangerous Goods</a>
                             <a href="pharma-shipment-handling.html">Pharma Shipment Handling</a>
+                            <a href="healthcare.html">Healthcare Instrument Shipping</a>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_quick_links">
