--- a/blog.html
+++ b/blog.html
@@ -180,9 +180,10 @@
                                 href="the-ultimate-guide-to-choosing-the-best-freight-forwarding-company-in-dubai-for-effortless-global-shipping.html">Blogs</a>
                             <a href="contact.html">Contact Us</a>
                             <a href="international-freight-forwarders.html">International Freight Forwarders</a>
-                            <a href="best-logistics-company-in-uk/index.html">UK</a>
-                            <a href="best-logistics-company-in-the-usa/index.html">USA</a>
+                            <a href="best-logistics-company-in-united-kingdom/index.html">United Kingdom</a>
+                            <a href="best-logistics-company-in-the-united-states-of-america/index.html">United States</a>
                             <a href="best-logistics-company-in-the-netherlands/index.html">Netherlands</a>
+                            <a href="best-logistics-company-in-united-arab-emirates/index.html">Arab Emirates</a>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_quick_links">
