--- a/sitemap.html
+++ b/sitemap.html
@@ -325,8 +325,8 @@
             <p><strong><a href="https://www.incshipping.com/sitemap" title="Sitemap | INC Shipping - sitemap">Sitemap |
                         INC Shipping </a></strong></p>
 
-            <p><strong><a href="https://incshipping.com/best-logistics-company-in-the-usa/" title="Best Logistics Company in the USA ">Best Logistics Company in the USA </a></strong></p>
-            <p><strong><a href="https://incshipping.com/best-logistics-company-in-uk/" title="Best Logistics Company in UK">Best Logistics Company in UK </a></strong></p>
+            <p><strong><a href="https://incshipping.com/best-logistics-company-in-the-united-states-of-america/" title="Best Logistics Company in the USA ">Best Logistics Company in the USA </a></strong></p>
+            <p><strong><a href="https://incshipping.com/best-logistics-company-in-united-kingdom/" title="Best Logistics Company in UK">Best Logistics Company in UK </a></strong></p>
             <p><strong><a href="https://incshipping.com/best-logistics-company-in-the-netherlands/" title="Best Logistics Company in the Netherlands">Best Logistics Company in the Netherlands </a></strong></p>
         </div>
     </section>
@@ -363,9 +363,10 @@
                             <a href="https://incshipping.com/blog">Blogs</a>
                             <a href="contact.html">Contact Us</a>
                             <a href="international-freight-forwarders.html">International Freight Forwarders</a>
-                            <a href="best-logistics-company-in-uk/index.html">UK</a>
-                            <a href="best-logistics-company-in-the-usa/index.html">USA</a>
+                            <a href="best-logistics-company-in-united-kingdom/index.html">United Kingdom</a>
+                            <a href="best-logistics-company-in-the-united-states-of-america/index.html">United States</a>
                             <a href="best-logistics-company-in-the-netherlands/index.html">Netherlands</a>
+                            <a href="best-logistics-company-in-united-arab-emirates/index.html">Arab Emirates</a>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_quick_links">
@@ -382,6 +383,7 @@
                             <a href="cross-trade.html">Cross Trade</a>
                             <a href="dangerous-goods.html">Dangerous Goods</a>
                             <a href="pharma-shipment-handling.html">Pharma Shipment Handling</a>
+                            <a href="healthcare.html">Healthcare Instrument Shipping</a>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_quick_links">
